Fixed the rating divide by zero bug, added wrap around for gallery, and added ability to add institution to create user

--- a/css/ratephoto.css
+++ b/css/ratephoto.css
@@ -72,3 +72,14 @@ table.friends {
 .hidden{
 	visibility: hidden;
 }
+
+.thumbnail {
+ float: left;
+  width: 50px;
+  padding: 10px;	
+}
+
+.gallery {
+border: 2px dashed #333;
+  background-color: #fff;	
+}
